Added url to inbox as well

--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -56,6 +56,15 @@
         </textarea>
       </div>
 
+      <!-- URL -->
+      <textarea ng-if="drawerAisleInitialized && showEditorProperty('url')"
+        id="ignoreSnap" class="text-metadata" ng-model="item.trans.link" input-model-validator
+        ng-trim="false"
+        ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
+        ng-disabled="foreignOwner" msd-elastic
+        maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+      </textarea>
+
       <!-- DESCRIPTION -->
       <textarea ng-if="drawerAisleInitialized && showEditorProperty('description')" id="ignoreSnap"
         ng-model="item.trans.description"
