--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-  <div ng-style="{'padding-bottom': isPropertyInEdit() ? 0 : EDITOR_FOOTER_HEIGHT}"
+  <div ng-style="{'padding-bottom': isPropertyInDedicatedEdit() ? 0 : EDITOR_FOOTER_HEIGHT}"
     class="container-fluid--inner">
     <div class="container-content" drawer-override-aisle="right" ng-init="drawerAisleInitialized = true">
 
@@ -58,13 +58,15 @@
       </div>
 
       <!-- URL -->
-      <textarea ng-if="drawerAisleInitialized && showEditorProperty('url')"
-        id="ignoreSnap" class="text-metadata" ng-model="item.trans.link" input-model-validator
-        ng-trim="false"
-        ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
-        ng-disabled="foreignOwner" msd-elastic
-        maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
-      </textarea>
+      <div ng-if="drawerAisleInitialized && showEditorProperty('url')"
+      class="row-vertically-centered with-textarea">
+        <textarea class="text-metadata" ng-model="item.trans.link" input-model-validator
+          ng-trim="false"
+          ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
+          ng-disabled="foreignOwner" msd-elastic
+          maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+        </textarea>
+      </div>
 
       <!-- DESCRIPTION -->
       <textarea ng-if="drawerAisleInitialized && showEditorProperty('description')" id="ignoreSnap"
