--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -59,7 +59,7 @@
     swiper-container-slide-changed="editorSwiperSlideChanged()">
     <div class="swiper-wrapper" ng-class="showNoteInstruction() && 'swiper-no-swiping'">
       <div class="swiper-slide" swiper-slide="noteEditor/basic" slide-index="0">
-        <div ng-style="{'padding-bottom': isPropertyInEdit() ? 0 : EDITOR_FOOTER_HEIGHT}"
+        <div ng-style="{'padding-bottom': isPropertyInDedicatedEdit() ? 0 : EDITOR_FOOTER_HEIGHT}"
           class="container-content" drawer-override-aisle="right" ng-init="drawerAisleInitialized = true"
           scroll-then-toggle="noteEditorTitlebarTitle" scroll-then-toggle-top="noteEditorTitleInput"
           scroll-then-toggle-resizeable="noteEditorTitleInput"
@@ -233,7 +233,8 @@
 
           <!-- URL -->
           <div class="row-vertically-centered with-textarea row-top-parent">
-            <textarea ng-model="note.trans.link" input-model-validator ng-trim="false"
+            <textarea class="text-metadata" ng-model="note.trans.link" input-model-validator ng-trim="false"
+              ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
               ng-change="inputChanged()" msd-elastic
               maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
             </textarea>
@@ -262,7 +263,7 @@
           <div ng-if="showEditorProperty('deleted', note)" class="group-mixed text-field">
             <div class="group-mixed--middle link-search-result">
               <span class="text-field--title">
-                {{note.trans.deleted | date:'EEE d MMMM y hh:mm' | lowercase}}
+                {{::note.trans.deleted | date:'EEE d MMMM y hh:mm' | lowercase}}
               </span>
             </div>
             <div class="group-mixed--right">
@@ -271,8 +272,8 @@
           </div>
         </div>
 
-        <footer class="container-content--after editor-footer" editor-footer="slideInfo">
-
+        <footer ng-if="showNoteEditorComponent('advancedFooter')"
+        class="container-content--after editor-footer" editor-footer="slideInfo">
           <!-- CONVERT -->
           <div ng-if="showNoteEditorComponent('advancedFooter', 'convert')" class="group-symmetrical">
             <a href ng-class="!showEditorAction('convertToTask') && 'invisible'"
