--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -70,7 +70,7 @@
                 <textarea class="text-heading-primary large" ng-model="list.trans.title"
                   input-model-validator ng-trim="false" msd-elastic ng-keydown="listTitlebarTextKeyDown($event)"
                   editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
-                  ng-disabled="foreignOwner"
+                  ng-disabled="readOnly"
                   placeholder="enter list title&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
                 </textarea>
               </div>
@@ -89,7 +89,7 @@
             <textarea class="text-metadata" ng-model="list.trans.link" input-model-validator
               ng-trim="false"
               ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
-              ng-disabled="foreignOwner" msd-elastic
+              ng-disabled="readOnly" msd-elastic
               maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
             </textarea>
           </div>
@@ -130,7 +130,7 @@
             ng-model="list.trans.description" input-model-validator ng-trim="false"
             ng-focus="setTextPropertyFocus('description', true)"
             ng-blur="setTextPropertyFocus('description', false)"
-            ng-disabled="foreignOwner"
+            ng-disabled="readOnly"
             msd-elastic placeholder="enter description&#8230;" maxlength="1024"
             autocapitalize="none" autocorrect="off">
           </textarea>
@@ -196,7 +196,7 @@
           <!-- LIST SHARE EDITOR -->
           <div ng-if="showListSubEditor('share')" class="swiper-no-swiping animate-fade-in">
 
-            <div ng-if="!foreignOwner" class="group-mixed vertically-centered">
+            <div ng-if="fullEditor" class="group-mixed vertically-centered">
               <div class="group-mixed--middle">
                 <input style="display: block; height: 22px; line-height: 22px;"
                   type="email" ng-model="shareEditor.data.email" placeholder="enter email&#8230;"
@@ -211,7 +211,7 @@
               <span ng-if="shareEditor.previouslyFailedEmail" class="text-error">invalid email</span>
             </div>
 
-            <div ng-if="!foreignOwner" class="group-mixed">
+            <div ng-if="fullEditor" class="group-mixed">
               <div class="group-mixed--left">
                 <input type="checkbox" ng-model="shareEditor.data.access" ng-true-value="2" ng-false-value="1"
                   icon-checkbox="'sharedToAccess'"/>
@@ -222,13 +222,13 @@
             </div>
 
             <div ng-if="shareEditor.existing" class="group-symmetrical">
-              <a href ng-if="!foreignOwner && !shareEditor.data.accepted" class="group-symmetrical--left"
+              <a href ng-if="fullEditor && !shareEditor.data.accepted" class="group-symmetrical--left"
                 ng-class="(!shareEditor.resendPending && !shareEditor.resendResolved) ? 'highlighted' : 'link-disable downplayed'"
                 swiper-click="resendListShare(shareEditor.data.uuid)">
                 <span ng-bind="getListShareResendStatusText()"></span>
               </a>
               <a href class="group-symmetrical--right" swiper-click="removeListShare()">
-                <span class="text-remove" ng-bind="foreignOwner ? 'remove' : 'unshare'"></span>
+                <span class="text-remove" ng-bind="fullEditor ? 'remove' : 'unshare'"></span>
               </a>
             </div>
           </div>
