--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -63,7 +63,7 @@
         <textarea class="text-metadata" ng-model="item.trans.link" input-model-validator
           ng-trim="false"
           ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
-          ng-disabled="foreignOwner" msd-elastic
+          ng-disabled="readOnly" msd-elastic
           maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
